criando estado do jogo até inicio de uma nova mão. Front falta ajustes
